@@ -117,8 +117,7 @@
 			<tr id="application-select-row">
 				<td><?php echo _('Application'); ?></td>
 				<td>
-					<input size="50" id="application" name="application" class="input">
-					<input id="application-select" type="button" class="input link_menu select-popup" value="<?php echo _('Select'); ?>">
+					<input size="50" id="application" name="application" class="input text"><input id="application-select" type="button" class="input link_menu select-popup" value="<?php echo _('Select'); ?>">
 				</td>
 			</tr>
 
