@@ -170,6 +170,7 @@ input[type="submit"].input[disabled].formlist { cursor: default; background: #ff
 input.jqueryinput,
 .jqueryinputset input[type="button"],
 .jqueryinputset input[type="submit"] { height: auto; }
+.text, .multiselect { padding-left: 2px; padding-right: 2px }
 input.macro { text-transform: uppercase; }
 textarea.textarea_standard,
 textarea.textarea_big { height: auto; }
@@ -217,7 +218,12 @@ ul.formlist .formrow .dd .checkbox { vertical-align: middle; }
 ul.formlist .formrow .dd { margin-left: 10px; }
 ul.formlist .formrow .text-field { margin-top: 2px; display: inline-block; height: 14px; }
 ul.formlist .hidden { display: none; }
-ul.formlist .text, ul.formlist textarea, ul.formlist .password { padding: 3px; }
+ul.formlist .text, ul.formlist textarea, ul.formlist .password {
+	padding-top: 3px; padding-bottom: 3px;
+}
+ul.formlist .text, ul.formlist textarea, ul.formlist .password, ul.formlist .multiselect {
+	padding-left: 3px; padding-right: 3px;
+}
 ul.formlist select { padding: 2px; }
 
 /* formlist buttons */
@@ -459,7 +465,7 @@ table.filter tr td.label { border-right: 0 !important; text-align: right; }
 table.filter tr td.controls { text-align: center; }
 table.filter .text { height: 16px; }
 table.filter .filter-select-button { height: 20px; vertical-align: bottom; }
-table.filter .filter-multiselect-select-button { height: 20px; vertical-align: bottom; margin-left: 2px; }
+table.filter .filter-multiselect-select-button { height: 20px; vertical-align: bottom; }
 table.filter .select { -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; height: 18px; vertical-align: top; margin-bottom: 1px; }
 table.filter .host-inventories .select,
 table.filter .host-inventories .text { vertical-align: middle; }
@@ -521,12 +527,18 @@ table.suggest tr td { text-align: left; padding-left: 4px; line-height: 2.2em; f
 .flickerfreescreen .shadow { background-color: #000000; }
 
 /* multiselect */
-.multiselect-wrapper { position: relative; width: 369px; }
-.multiselect { margin: 0 2px 0 0; width: 317px; position: relative; float: left; }
-.multiselect-button { width: 50px; height: 20px; position: absolute; right: 0; top: 0; z-index: 50; }
+.multiselect-wrapper { position: relative; width: 380px; }
+.multiselect { margin: 0 2px 0 0; width: 312px; position: relative; float: left;
+	background: #ffffff; border: 1px solid #AAAAAA;
+}
+.multiselect.active {
+	-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+	border: 1px solid #5897FB;
+}
+.multiselect-button { width: 50px; height: 20px; float: left; }
 .multiselect-button .select-popup { margin-left: 8px; }
 .multiselect input[type="text"] {
-	margin: 0 0 0 4px; padding: 2px 0 0 4px; top: 0; left: 0; min-height: 14px; position: absolute; z-index: 10;
+	margin: 0 0 0 4px; top: 0; left: 0; min-height: 14px; position: absolute; z-index: 10;
 	background: none; border: none; outline: none;
 }
 
@@ -536,13 +548,7 @@ table.suggest tr td { text-align: left; padding-left: 4px; line-height: 2.2em; f
 }
 
 .multiselect .selected ul {
-	padding: 0; margin: 0; min-height: 18px;
-	background: #ffffff; border: 1px solid #AAAAAA;
-	white-space: normal;
-}
-.multiselect .selected ul.active {
-	-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-	border: 1px solid #5897FB;
+	margin: 0; min-height: 18px; white-space: normal; padding: 0;
 }
 .multiselect .selected ul li {
 	margin: 1px 1px 0 0; padding: 1px 0 1px 0; min-height: 12px; line-height: 12px; vertical-align: top; display: inline-block;
@@ -554,19 +560,19 @@ table.suggest tr td { text-align: left; padding-left: 4px; line-height: 2.2em; f
 	background-image: linear-gradient(#F4F4F4 20%, #F0F0F0 50%, #E8E8E8 52%, #EEE 100%);
 	border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px;
 }
-.multiselect .selected ul li:first-child { margin-left: 1px; }
 .multiselect .selected ul li { position: relative; }
 .multiselect .selected ul li.pressed { background: #D4D4D4; }
-.multiselect .selected ul li span.text { text-align: justify; white-space: nowrap; }
+.multiselect .selected ul li span.text { padding: 0 4px; text-align: justify; white-space: nowrap; }
 .multiselect .selected ul li span.arrow {
 	padding: 0 -12px 0 12px; cursor: pointer; position: absolute; z-index: 11; width: 12px; height: 12px; right: 0px;
 	background: url("../images/general/multiselect.png") no-repeat -12px 1px;
 }
 .multiselect .selected ul li span.arrow:hover { background-position: -12px -19px; }
 .multiselect .available {
-	top: 0; left: 0; min-height: 24px; position: absolute; z-index: 12; display: none;
+	top: 0; left: -1px; min-height: 24px; position: absolute; z-index: 12; display: none;
 	background: #FFFFFF; border: 1px solid #AAAAAA; border-top: none;
-	-webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15); -moz-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15); box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
+	-webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15); -moz-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
+	box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15); width: 100%;
 }
 .multiselect .available .prefix { color: #838383; }
 .multiselect .available .matched { font-weight: bold; }
