@@ -117,8 +117,8 @@ table.tableinfo-overview-hint { width: 200px; }
 .latest-mon .filter tr td.inputcol { min-width: 277px; width: 35%; }
 .latest-mon .filter tr td.inputcol .checkbox { margin-top: 4px; }
 .latest-mon .filter tr td .text { width: 216px; }
-.latest-mon .filter .multiselect-wrapper { width: 269px; }
-.latest-mon .filter .multiselect { width: 217px; line-height: 12px; }
+.latest-mon .filter .multiselect-wrapper { width: 280px; }
+.latest-mon .filter .multiselect { width: 216px; line-height: 12px; }
 
 /*history */
 .history .filter tr td { width: 50%; }
@@ -144,12 +144,9 @@ table.tableinfo-overview-hint { width: 200px; }
 .item-list table.filter tr td.label.col4 { width: 8%; }
 .item-list .filter .col1 .text,
 .item-list .filter .multiselect { width: 165px; line-height: 12px; }
-.item-list .filter .col1 .text { padding: 1px 0; }
 .item-list .filter .col1 span.text { padding: 0 4px; }
-.item-list .filter .multiselect { padding: 0; }
-.item-list .filter .multiselect-wrapper { width: 217px; }
+.item-list .filter .multiselect-wrapper { width: 225px; }
 .item-list .menuPopup { width: 200px; }
-.item-list .filter .multiselect .selected ul { margin: 0;}
 
 /* service list */
 .service-list .tableinfo .service-caption-soft a { color: #888; }
@@ -181,8 +178,7 @@ table.tableinfo-overview-hint { width: 200px; }
 #map-window #mapLinksContainer { border: 1px solid rgb(170, 170, 170); max-height: 128px; overflow-y: scroll; overflow-x: hidden; }
 #map-window #linkForm { display: none; }
 #map-window #linkForm #linklabel { margin-top: 4px; }
-#selementForm .multiselect .selected ul { margin: 0;}
-#map-window #application-select-row .link_menu { margin-left: 6px; }
+#map-window .link_menu { margin-left: 6px; }
 
 /* maintenance icon */
 .icon-maintenance-inline, .icon-maintenance-abs {
